--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,39 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #474d5a;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(4px + 2vmin);
   color: white;
+}
+
+img{
+  border-radius: 6.5px;
+}
+
+.css-jfjepd:active{
+  box-shadow: 0px 0px 0px 0px, inset rgb(36, 36, 36) 0px 1px 1px 0.5px;
+  transform: translateY(3px);
+}
+
+.css-12bsin5:active{
+  box-shadow: 0px 0px 0px 0px, inset rgb(36, 36, 36) 0px 1px 1px 0.5px;
+  transform: translateY(3px);
+}
+
+
+
+
+
+
+
+
+
+@media screen and(min-Width: 850px) {
+
+
+  
 }
 
